--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-context-selector": "^1.4.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.20.1",
